--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body id="body">
     <div class="container">
-        <h1>Bakcground Gradient Generator!</h1>
+        <h1>Background Gradient Generator!</h1>
         <div class="color-container">
             <input class="colorOne" type="color" name="color1">
             <input class="colorTwo" type="color" name="color2">
